--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,7 @@
 {
     "hosting": {
-      "public": "build",
+      "site": "personal-website-80bdf",
+      "public": "public",
       "ignore": [
         "firebase.json",
         "**/.*",
