New thought leadership in now, still need to edit classics piece

--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,19 @@
 {
-    "hosting": {
-      "site": "personal-website-80bdf",
-      "public": "public",
-      "ignore": [
-        "firebase.json",
-        "**/.*",
-        "**/node_modules/**"
-      ]
-    }
+  "hosting": {
+    "site": "personal-website-80bdf",
+    "public": "build",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
+}
+
   
